<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="version">Version</string>
    <string name="app_name">Privacy-Checker</string>
    <string name="title_home">Home</string>
    <string name="title_installed_apps">Installiert</string>
    <string name="title_all_apps">Alle Apps</string>
    <string name="title_activity_all_apps">Alle Apps</string>
    <string name="action_settings">Settings</string>
    <string name="installed_apps_button">Installierte Apps</string>
    <string name="title_activity_installed_apps">Installierte Apps</string>
    <string name="title_privacy">Privatsphäre</string>
    <string name="title_alphabet">Name</string>
    <string name="title_functional">Bewertung</string>
    <string name="title_category">Kategorien</string>
    <string name="title_activity_installed_apps_list">Installierte Apps</string>
    <string name="title_activity_home">Privacy-Checker</string>
    <string name="last_updated_apps">Zuletzt aktualisiert:</string>
    <string name="title_activity_apps_by_category">Kategorie</string>
    <string name="app_detail_icon">Icon</string>
    <string name="app_detail_rating_pic">Bewertung</string>
    <string name="app_detail_button_install">Installieren</string>
    <string name="title_activity_app_details">Details</string>
    <string name="splash_alert_title">Lade Apps</string>
    <string name="splash_alert_text">Installierte Apps werden erstmalig erfasst...</string>
    <string name="app_detail_privacy_rating_title">Privatsphärebewertung</string>
    <string name="app_detail_rate_app_heading">Privatsphäre Bewerten</string>
    <string name="app_detail_rate_app_value_1">Richtig schlecht</string>
    <string name="app_detail_rate_app_value_2">Nicht so gut</string>
    <string name="app_detail_rate_app_value_3">Mittelmäßig</string>
    <string name="app_detail_rate_app_value_4">Gut</string>
    <string name="app_detail_rate_app_value_5">Exzellent</string>
    <string name="app_details_privacy_rating_explanation">Die Gesamtbewertung setzt sich aus den drei rechts davon zu sehenden Komponenten zusammen. Die erste Komponente ist eine automatisch berechnete Bewertung aus den geforderten Berechtigungen. Die zweite wird von euch gestellt. Sie enthält die durchschnittliche Nutzerbewertung. Die dritte Komponente ist die durchschnittliche Bewertung qualifizierter Experten.</string>
    <string name="app_details_no_description_available">Es tut uns leid, leider liegt zu dieser App noch keine Beschreibung vor.</string>
    <string name="app_details_privacy_rating_permissions_title">Geforderte Berechtigungen:</string>
    <string name="app_details_privacy_rating_permissions_title_no_permissions">Diese App fordert keine Berechtigungen.</string>
    <string name="app_detail_privacy_rating_category_better">Diese App ist privatsphärefreundlicher als der Durchschnitt der Apps der Kategorie: </string>
    <string name="app_detail_privacy_rating_category_worse">Diese App ist weniger privatsphärefreundlich als der Durchschnitt der Apps der Kategorie: </string>
    <string name="validation_error_no_total_rating">Bitte geben Sie eine Gesamtbewertung an.</string>
    <string name="validation_error_intro">Leider traten folgende Fehler auf:</string>
    <string name="validation_warning_intro">Achtung, folgende Aspekte bedürfen deiner Aufmerksamkeit:</string>
    <string name="validation_warning_continue">Trotzdem fortfahren?</string>
    <string name="app_detail_rate_app_success">Die Bewertung wurde gespeichert.</string>
    <string name="app_detail_rate_app_permissions_explanation">Im Folgenden kannst Du zu jeder geforderten Berechtigung angeben, ob Du sie für diese App erwartet hast.</string>
    <string name="app_detail_rate_app_permissions_title">Berechtigungsbewertung</string>
    <string name="app_detail_rate_app_title">Gesamtbewertung</string>
    <string name="app_detail_rate_app_permissions_expected">Berechtigung erwartet ?</string>
    <string name="app_detail_rate_app_permissions_unexpected">Unerwartet</string>
    <string name="app_detail_rate_app_expert_text">Ich bin Experte auf dem Gebiet Privatsphäre:</string>
    <string name="validation_error_title">Hinweis</string>
    <string name="rating_save_success_title">Erfolg</string>
    <string name="app_detail_rate_app_comment_title">Erfahrungsbericht abgeben</string>
    <string name="enter_comment">Gebe Deinen Kommentar an</string>
    <string name="yes_no">Ja  | Nein</string>
    <string name="understandable">Verstehe ich</string>
    <string name="not_understandable">Verstehe ich nicht</string>
    <string name="app_detail_permissions_explanation">Der Anteil der Nutzer, die folgende Berechtigungen dieser App als unerwartet markiert haben:</string>
    <string name="user_type_normal">Normaler Nutzer</string>
    <string name="user_type_expert">IT Experte</string>
    <string name="title_activity_rate_app">RateAppActivity</string>
    <string name="not_available">Nicht verfügbar</string>
    <string name="filter_overlay_title">Filter Optionen</string>
    <string name="permissions">Berechtigungen</string>
    <string name="functional_rating">Play Store Bewertung</string>
    <string name="validation_warning_no_permissions">Du hast keine Berechtigungen als (un-)erwartet markiert.</string>
    <string name="title_imprint_acitivty">Impressum</string>
    <string name="imprint_main1">Version: 1.0 \n\nEntwickelt von:\nDaniel Geißler\nLukas Großberger\nStefan Gutsch\nNicolina Wenzler\nLisa Zimmermann\n\nIn Zusammenarbeit mit SecUSo </string>
    <string name="imprint_main2">Technische Universität Darmstadt </string>
    <string name="licence">cc-by-nc </string>
    <string name="imprint_SecUso_link"> https://www.secuso.informatik.tu-darmstadt.de </string>
    <string name="filter">Filtern</string>
    <string name="filter_overlay_submit">Filter anwenden</string>

    <string-array name="rating_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="allowed_permissions">Geduldete Brechtigungen</string>
    <string name="app_detail_description_na">Keine Beschreibung verfügbar.</string>
    <string name="comment_old_version">veralteter Kommentar</string>
    <string name="comment_current_version"></string>
    <string name="privacy_rating_composition">Zusammensetzung Privatsphärebewertung</string>

</resources>