<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.otaris.zertapps.privacychecker.Imprint$PlaceholderFragment" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/logo"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/imprint_main1" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secuso_logo"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:text="@string/imprint_SecUso_link"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/link"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/imprint_main2" />

    <ImageView
        android:id="@+id/tu_logo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/tu_darmstadt_web" />

    <TextView
        android:id="@+id/licence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tu_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/licence" />

    <ImageView
        android:id="@+id/secuso_logo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/secuso_logo" />

</RelativeLayout>