<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.otaris.zertapps.privacychecker.HomeActivity$PlaceholderFragment" >

    <ListView
        android:id="@+id/latest_apps_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_updated_apps_textview"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_below="@+id/last_updated_apps_textview" >

    </ListView>

    <Button
        android:id="@+id/all_apps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="displayAllApps"
        android:text="@string/title_all_apps" />

    <TextView
        android:id="@+id/last_updated_apps_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/installed_apps_button"
        android:paddingTop="18dp"
        android:paddingLeft="4dp"
        android:text="@string/last_updated_apps"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/installed_apps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="displayInstalledApps"
        android:text="@string/installed_apps_button" />

</RelativeLayout>